--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts-for-react": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-select": "^5.10.2",
     "tailwindcss": "^4.1.16"
