--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xontel-coding-challenge",
+  "name": "admin-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "echarts-for-react": "^3.0.2",
+    "firebase": "^12.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
